<resources>
    <string name="app_name">Expense Manager</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inform_intro">Fill in your information</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="balance">Balance</string>
    <string name="action_finish">Registation</string>


    <string name="split">Split</string>
    <string name="result">Result</string>
    <string name="split_expense_title">Split Expense</string>
    <string name="expense_title">Expense Title</string>
    <string name="expense_title_input">Title</string>
    <string name="num_people">Number of People</string>
    <string name="num_people_input">Amount</string>
    <string name="split_amount">Amount</string>
    <string name="split_type">Expense Type</string>
    <string name="split_types">Type</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="exit">Exit</string>
    <string name="title">Title</string>

    <string name="noti">Notification</string>

    <string name="category_spinner">Categories</string>
    <string-array name="categories_array">
        <item>Food and Drinks</item>
        <item>Shopping</item>
        <item>Public Transport</item>
        <item>Groceries</item>
        <item>Investment</item>
        <item>Loan</item>
        <item>Public Transport</item>
        <item>Entertainment</item>
        <item>Personal Care</item>
        <item>Other</item>
    </string-array>

    <string name="category_spinner2">Categories</string>
    <string-array name="categories_income_array">
        <item>Deposits</item>
        <item>Investments</item>
        <item>Refunds</item>
        <item>Salaries</item>
        <item>Other Income</item>
    </string-array>

</resources>
