<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tranghoang.expense.BalanceActivity"
    android:gravity="top">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inform_intro"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="30sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        >

        <AutoCompleteTextView
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:hint="@string/last_name"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textIsSelectable="false"
            android:textStyle="bold"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        >

        <AutoCompleteTextView
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorPrimary"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:textIsSelectable="false"
            android:textStyle="bold"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        >

        <EditText
            android:id="@+id/balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/balance"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/register_finish"
        style="?android:textAppearanceMedium"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:onClick="signUp"
        android:text="@string/action_finish"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:max="100"
        android:progress="50" />


</LinearLayout>