<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard"
    android:orientation="vertical">

    <TextView
        android:id="@+id/split_expense_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/split_expense_title"
        android:textAllCaps="true"
        android:textColor="#51536D"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#3F51B5"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/amount_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Amount"
        android:inputType="numberDecimal"
        android:textColor="#3F51B5"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/num_people_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Number of People"
        android:inputType="numberDecimal"
        android:textColor="#3F51B5"
        android:textSize="20sp" />

    <Button
        android:id="@+id/splitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/split"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="#3F51B5"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/amount_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="#3F51B5"
        android:textSize="20sp" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:onClick="add"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/balanceINvi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible" />

</LinearLayout>